css/style.css
#app{
    height: 100vh;
    width: 100%;
    background: linear-gradient(180deg, #009688 20%, #d8dbd5 20%) ;
}
.debug{
    border: 1px solid red;
}
.wrapper{
    background-color: white;
    height: calc(100vh - 4rem);
}
.left{
    height: 100%;
    width: 40%;   
    
}
.right{
    width: 60%;
    background-image: url(../img/mine.jpg);
    height: 100%;
}
.top-contact{
    height: 50px;
    width: 100%;
    background-color: #EAEAEA;
}
.top-contact img{
    border-radius: 50%;
    width: 10%;
}
i{
    padding: 5px;
}
.notifications{
    background-color: #8EDAFC;
    height: 60px;
}
.notifications i{
    color: #8EDAFC;    
}
.searchbar{
    height:50px;
}
.user img{
    width: 10%;
    border-radius: 50%;
}
.conversations{
    overflow-y: scroll;
    height: calc(100% - 160px);
}
.toolbar{
    height: 50px;
    width: 100%;
    background-color: #EAEAEA;
}
.chat{
    height: calc(100% - 100px);
    overflow-y: scroll;
}
.sent{
    background-color: #e1ffc7;
    min-width: 250px;
    padding: 10px;
    border-radius: 10px;
}
.received{
    background-color: white;
    min-width: 250px;
    padding: 10px;
    border-radius: 10px;
}
.chatclock{
    font-size: 10px;
    color: lightslategray;
}
.toolbar i{
    font-size: 1.5rem;
}

